5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1601_2425.log
== SUBMITION (2019-03-25 19:22:20) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total"))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3))
-- EXECUTION TIME:
0.191653
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
2.0
26.572
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0
124.4
2129.6
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0
464.6
4089.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:22:24) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total"))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3))
-- EXECUTION TIME:
0.116691
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
2.0
26.572
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0
124.4
2129.6
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0
464.6
4089.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:23:10) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total"))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3)"km/1")
-- ERROR:
File "XXXX", line 5
    print(round(max(d,t)-min(d,t), 3)"km/1")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:23:40) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total"))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3))
-- OUTPUT:
28.572
2.0
26.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:24:19) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total"))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3))
-- OUTPUT:
28.572
2.0
26.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:24:32) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total"))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3))
-- EXECUTION TIME:
0.167011
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
2.0
26.572
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0
124.4
2129.6
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0
464.6
4089.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:24:47) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total"))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3))
print("km/1")
-- EXECUTION TIME:
0.159233
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
2.0
26.572
km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0
124.4
2129.6
km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0
464.6
4089.4
km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:00) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total"))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 4))
-- OUTPUT:
28.572
2.0
26.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:30) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 2))
-- OUTPUT:
28.572
2.0
26.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:27:04) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 2), "km/1")
-- EXECUTION TIME:
0.198244
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
2.0
26.57 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0
124.4
2129.6 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0
464.6
4089.4 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:27:06) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 2), "km/1")
-- OUTPUT:
28.572
2.0
26.57 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:27:35) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 2), "km/1")
-- OUTPUT:
28.572
2.0
26.57 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:27:35) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 2), "km/1")
-- EXECUTION TIME:
0.111969
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
2.0
26.57 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0
124.4
2129.6 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0
464.6
4089.4 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:27:45) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 2), "km/1")
-- OUTPUT:
28.572
2.0
26.57 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:27:57) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 2), "km/1")
-- EXECUTION TIME:
0.216694
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
2.0
26.57 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0
124.4
2129.6 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0
464.6
4089.4 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:04) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 2), "km/1")
-- OUTPUT:
28.572
2.0
26.57 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:29:11) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- OUTPUT:
28.572
2.0
26.572 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:29:23) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- EXECUTION TIME:
0.18473
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
2.0
26.572 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0
124.4
2129.6 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0
464.6
4089.4 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:29:26) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(max(d,t))
print(min(d,t))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- OUTPUT:
28.572
2.0
26.572 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:31:09) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- EXECUTION TIME:
0.247205
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
26.572 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2129.6 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4089.4 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:31:12) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- EXECUTION TIME:
0.189724
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
26.572 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
26.572 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
2129.6 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:31:12) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- EXECUTION TIME:
0.197675
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
2129.6 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
26.572 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4089.4 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:31:12) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- EXECUTION TIME:
0.17513
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
2129.6 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
4089.4 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
2129.6 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:31:12) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- EXECUTION TIME:
0.306943
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1601/2425/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:31:12) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("total: "))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- OUTPUT:
26.572 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:24:06) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("combustivel gasto: "))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- OUTPUT:
26.572 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:24:11) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("combustivel gasto: "))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- OUTPUT:
26.572 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:25:05) 
-- CODE:
d = float(input("distancia total: "))
t = float(input("combustivel gasto: "))
print(round(max(d,t)-min(d,t), 3), "km/1")
-- EXECUTION TIME:
0.191628
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
26.572 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2129.6 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4089.4 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:09:24) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d*c,3) 
print(cm, "km/1")
-- OUTPUT:
57.144 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:09:38) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d*c,3) 
print(cm, "km/1")
-- EXECUTION TIME:
0.161828
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
57.144 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
280397.6 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
2115788.4 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:09:49) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d*c,3) 
print(cm, "km/1")
-- OUTPUT:
57.144 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:10:05) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d*c,3) 
print(cm, "km/1")
-- OUTPUT:
57.144 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:11:29) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d*c,3) 
print(cm, "km/1") 
-- OUTPUT:
57.144 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:11:57) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d*c,2) 
print(cm, "km/1") 
-- OUTPUT:
57.14 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:12:20) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d//c,3) 
print(cm, "km/1") 
-- OUTPUT:
14.0 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:12:31) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d//c,3) 
print(cm, "km/1") 
-- EXECUTION TIME:
0.154663
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.0 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.0 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.0 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:15:39) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round((d//c)*,3) 
print(cm, "km/1") 
-- ERROR:
File "XXXX", line 3
    cm = round((d//c)*,3) 
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:15:46) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round((d//c),3) 
print(cm, "km/1") 
-- OUTPUT:
14.0 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:17:19) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
r = 3
cm = round((d//c)*3,3) 
print(cm, "km/1") 
-- OUTPUT:
42.0 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:17:22) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
r = 3
cm = round((d//c)*3,3) 
print(cm, "km/1") 
-- EXECUTION TIME:
0.181022
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
42.0 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
54.0 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
27.0 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:17:23) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
r = 3
cm = round((d//c)*3,3) 
print(cm, "km/1") 
-- EXECUTION TIME:
0.125678
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
42.0 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
54.0 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
27.0 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:17:30) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
r = 1
cm = round((d//c)*1,3) 
print(cm, "km/1") 
-- EXECUTION TIME:
0.163139
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.0 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.0 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.0 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:24:19) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/1") 
-- OUTPUT:
14.286 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:24:22) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/1") 
-- EXECUTION TIME:
0.14539
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:24:22) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/1") 
-- EXECUTION TIME:
0.219632
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:24:28) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/1") 
-- OUTPUT:
14.286 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:24:51) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/1") 
-- EXECUTION TIME:
0.154715
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:24:58) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/L") 
-- OUTPUT:
14.286 km/L
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:24:59) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/L") 
-- EXECUTION TIME:
0.186086
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/L
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/L
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/L
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:25:00) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/L") 
-- EXECUTION TIME:
0.188585
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/L
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/L
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/L
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:25:01) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/L") 
-- EXECUTION TIME:
0.130133
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/L
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/L
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/L
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:25:10) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/l") 
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:25:11) 
-- CODE:
d = float(input("distancia total: "))
c = float(input("combustivel: "))
cm = round(d/c,3) 
print(cm, "km/l") 
-- EXECUTION TIME:
0.114894
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
